2007-07-18  Bernhard Herzog  <bh@intevation.de>

	* include/includes.h: Remove openssl includes

2007-07-18  Bernhard Herzog  <bh@intevation.de>

	* openvasd/openvas-check-signature.c: Use GnuTLS instead of
	OpenSSL.  See comments in the file for things that could be done
	better.
	(print_tls_error, map_file, hexdecode): New.  Helper functions.
	(generate_signature, verify_signature): Use GnuTLS instead of
	OpenSSL.  Also, both functions now have an additional parameter
	for the keyfile/certfile to use so that their filenames are no
	longer hard wired.
	(main): Add command line arguments to specifiy the key or
	certificat to use when signing or verifying.  Pass those filenames
	to generate_signature and verify_signature.

2007-07-04  Bernhard Herzog  <bh@intevation.de>

	* openvasd/plugs_hash.c (plugins_hash): Handle errors from
	gcry_md_open.  plugins_hash may return NULL now.

	* openvasd/comm.c (comm_send_md5_plugins): Handle case where
	plugins_hash returns NULL.

2007-07-02  Bernhard Herzog  <bh@intevation.de>

	* openvasd/plugs_hash.c (file_hash, plugins_hash): Use unsigned
	char (pointer/array) to hold the digest to avoid warnings about
	type mismatch.

2007-07-02  Bernhard Herzog  <bh@intevation.de>

	* openvasd/md5.c, openvasd/md5.c: removed. no longer needed.

	* openvasd/Makefile: md5.c has been removed.

	* openvasd/comm.c: Do not included md5.h.  it wasn't needed anyway

2007-07-02  Bernhard Herzog  <bh@intevation.de>

	* openvasd/users.c remove includes of openssl headers.
	(check_user): Use libgcrypt to compute md5 sums.

	* openvasd/plugs_hash.c (md5sum_hex): New function to convert a
	binary md5 sum to hexadecimal.
	(file_hash, dir_plugins_hash, plugins_hash): Use libgcrypt to
	compute md5 sums.

2007-07-02  Bernhard Herzog  <bh@intevation.de>

	* openvasd/openvasd.c: Use the libopenvas ssl abstraction instead
	of openssl. As a consequence the ssl_cipher_list config option is
	no longer supported.
	(ssl_mt, ssl_ctx): Removed.